hphp/hack/test/typecheck/reactive/print_in_rx5.php.exp
File "print_in_rx5.php", line 10, characters 5-11:
`echo` or `print` are not allowed in reactive functions. (Typing[4226])
