hphp/hack/test/typecheck/reactive/print_in_rx5.php
<?hh // strict
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

interface Rx {}

class A {
  <<__Rx, __OnlyRxIfImpl(Rx::class)>>
  public function f(): void {
    // should be error
    print 1;
  }
}
